# basicviz

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja
project/: CMakeLists.txt  app.cpp
src/: CMakeLists.txt  graph_visualization.cpp  graph_visualization.h  layout.cpp  layout.h  main.cpp  main.h  minimization.cpp  minimization.h  minimizaton.cpp  netfmt_bench.cpp  netfmt_bench.h
src/Sergeichev Andrey/: CMakeLists.txt  pretty_print.cpp
test/: CMakeLists.txt  bench.cpp  cmake_install.cmake  test-viz.cpp  test.xml  ttf_sample.cpp  viz_example.cpp
test/bench/: README.md
